<fix> 실행 오류 수정